--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
     <header>
         <h1>Mancala</h1>
-        <p></p>
     </header>
     <main>
-        <!-- <canvas class="game" width="1270px" height="310px"></canvas> -->
         <div class='MancalaPlayer1'></div>
-        <div class='pits1Player1' draggable="true" ondragstart="drag(event)"></div>
+        <div class='pits1Player1'></div>
         <div class='pits2Player1'></div>
         <div class='pits3Player1'></div>
         <div class='pits4Player1'></div>
@@ -28,13 +26,13 @@
         <div class='pits4Player2'></div>
         <div class='pits5Player2'></div>
         <div class='pits6Player2'></div>
-        
-    </main>
-    <footer>
-        <div class='player1Score'>Player1 Score:</div>
-        <div class='player2Score'>Player2 Score:</div>
         <div class='player1'>player1</div>
         <div class='player2'></div>
+    </main>
+    <footer>
+        <p></p>
+        <div class='player1Score'>Player1 Score:</div>
+        <div class='player2Score'>Player2 Score:</div>
         <button class='reset'>Reset</button>
     </footer>
 </body>
