Time was set for CAPTURE message. Remove the click event listener when it is not the player turn

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <h1>Mancala</h1>
+        <ul>
+            <li class="hToPlay">How to Play</li>
+            <li class="onePlayer">1 Player</li>
+            <li class="twoPlayers">2 Players</li>
+        </ul>
     </header>
     <main>
         <div class='MancalaPlayer1'></div>
@@ -26,8 +31,10 @@
         <div class='pits4Player2'></div>
         <div class='pits5Player2'></div>
         <div class='pits6Player2'></div>
-        <div class='player1'>player1</div>
+        <div class='player1'>Player1 Turn</div>
         <div class='player2'></div>
+        <div class='left'></div>
+        <div class='right'></div>
     </main>
     <footer>
         <p></p>
